# biofast

./: .gitignore  Cargo.toml  README.md
bedcov/: Makefile  README.md  bedcov_c1_cgr.c  bedcov_cr1_cgr.cr  bedcov_cr1_klib.cr  bedcov_d_dgr.d  bedcov_go1.go  bedcov_jl1_klib.jl  bedcov_js1_cgr.js  bedcov_js1_k8.js  bedcov_lua1.lua  bedcov_nim1_klib.nim  bedcov_py1_cgr.py  bedcov_rs1_rustbio.rs
bedcov/fsharp/: Bedcov.fs  IITree.fs  fsharp.fsproj
fqcnt/: Makefile  README.md  fqcnt.r  fqcnt_c1_kseq.c  fqcnt_cr1_klib.cr  fqcnt_go1.go  fqcnt_go2.go  fqcnt_jl1_klib.jl  fqcnt_jl2x_fastx.jl  fqcnt_js1_k8.js  fqcnt_lua1_klib.lua  fqcnt_lua2_4l.lua  fqcnt_py2_rfq.py  fqcnt_py7x_fx.py  fqcnt_py7x_pysam.py  fqcnt_py9x_dinopy.py  fqcnt_py9x_needletail.py  fqcnt_rs1_rustbio.rs  fqcnt_rs2_needletail.rs  fqcnt_scala_fgbio.sc  fqcnt_v1_4l.py  fqcnt_v1_klib.jl  fqcnt_v1_klib.nim  fqcnt_v1_kseq.c  fqcnt_v2_rfq.py  fqcnt_v3_mappy.py  fqcnt_v4_bpitr.py  fqcnt_v5_bp.py  fqcnt_v6_pyfx.py  go.mod  klib.nim  kseq.h
fqcnt/fsharp/: fqcnt_fsharp.fs  fsharp.fsproj
fqcnt/scala/: build.sc
fqcnt/scala/tools/src/com/github/biofast/: FgBio.scala
lib/: Klib.jl  cgranges.c  cgranges.h  klib.cr  klib.nim  kseq.h
